Cleaned up tests