@@ -258,6 +258,11 @@
 				<configuration>
 					<argLine>
 						--add-opens java.base/java.util=ALL-UNNAMED
+						--add-opens java.base/java.math=ALL-UNNAMED
+						--add-opens java.base/java.time=ALL-UNNAMED
+						--add-opens java.base/java.time.zone=ALL-UNNAMED
+						--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+						--add-opens java.base/sun.util.calendar=ALL-UNNAMED
 						--add-exports java.base/jdk.internal.misc=ALL-UNNAMED
 					</argLine>
 				</configuration>
